--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -1009,20 +1009,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a59438ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BackwardShockwave(th.nn.Module):\n",
-    "    pass\n",
-    "\n",
-    "class ForwardShockwave(th.nn.Module):\n",
-    "    pass\n",
-    "\n",
-    "class Model(MessagePassing):\n",
-    "    pass"
+    "import os\n",
+    "import torch as th\n",
+    "from tqdm.notebook import tqdm\n",
+    "from torch.utils.data import SubsetRandomSampler\n",
+    "from i24_vsl.data.inrix import InrixDataset\n",
+    "from i24_vsl.model.model import Model\n",
+    "from torch.utils.data import DataLoader"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f77f56ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = InrixDataset(root='../data')\n",
+    "n_train = len(dataset)\n",
+    "split = n_train // 10 * 6\n",
+    "idcs = list(range(n_train))\n",
+    "generator = th.Generator().manual_seed(42)\n",
+    "\n",
+    "trn_sampler = SubsetRandomSampler(idcs[:split], generator)\n",
+    "val_sampler = SubsetRandomSampler(idcs[split:], generator)\n",
+    "\n",
+    "trn_loader = DataLoader(dataset=dataset,\n",
+    "                        batch_size=16,\n",
+    "                        sampler=trn_sampler,\n",
+    "                        num_workers=0)\n",
+    "val_loader = DataLoader(dataset=dataset,\n",
+    "                        batch_size=16,\n",
+    "                        sampler=val_sampler,\n",
+    "                        num_workers=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8a673429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONFIG = {\n",
+    "    \"static_estimator\": dict(\n",
+    "        n_loc=21, time_feature=2 \n",
+    "    ),\n",
+    "    \"dynamic_estimator\": dict(\n",
+    "        in_features=5, in_channels=3, res_channels=64,\n",
+    "        num_layers=2, num_blocks=1\n",
+    "    ),\n",
+    "    \"enable_shockwave\": False\n",
+    "}\n",
+    "model = Model(CONFIG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ec5dc979",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7278463835e48f6afc7438472c844d3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Main loops:   0%|          | 0/25 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ad97ee6f506456e9ce99808a76dc26a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training...:   0%|          | 0/206598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train [1/206598] Loss: 4534.570801.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 5 and the array at index 2 has size 4",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [4], line 9\u001b[0m\n\u001b[1;32m      2\u001b[0m lr_scheduler \u001b[38;5;241m=\u001b[39m th\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mlr_scheduler\u001b[38;5;241m.\u001b[39mStepLR(optimizer, step_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, gamma\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.3\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m25\u001b[39m),\n\u001b[1;32m      5\u001b[0m                   desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMain loops\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      6\u001b[0m                   position\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m,\n\u001b[1;32m      7\u001b[0m                   leave\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# Train\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, (x, time, loc, hol, y) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(tqdm(trn_loader,\n\u001b[1;32m     10\u001b[0m                                                     desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining...\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     11\u001b[0m                                                     total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(trn_loader),\n\u001b[1;32m     12\u001b[0m                                                     position\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m     13\u001b[0m                                                     leave\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)):\n\u001b[1;32m     14\u001b[0m         optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m     15\u001b[0m         _, loss \u001b[38;5;241m=\u001b[39m model(\n\u001b[1;32m     16\u001b[0m             {\n\u001b[1;32m     17\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m: x\u001b[38;5;241m.\u001b[39mfloat(),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     21\u001b[0m             }\n\u001b[1;32m     22\u001b[0m         )\n",
+      "File \u001b[0;32m~/anaconda3/envs/vsl/lib/python3.8/site-packages/tqdm/notebook.py:259\u001b[0m, in \u001b[0;36mtqdm_notebook.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    257\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    258\u001b[0m     it \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39m(tqdm_notebook, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__iter__\u001b[39m()\n\u001b[0;32m--> 259\u001b[0m     \u001b[39mfor\u001b[39;00m obj \u001b[39min\u001b[39;00m it:\n\u001b[1;32m    260\u001b[0m         \u001b[39m# return super(tqdm...) will not catch exception\u001b[39;00m\n\u001b[1;32m    261\u001b[0m         \u001b[39myield\u001b[39;00m obj\n\u001b[1;32m    262\u001b[0m \u001b[39m# NB: except ... [ as ...] breaks IPython async KeyboardInterrupt\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/vsl/lib/python3.8/site-packages/tqdm/std.py:1195\u001b[0m, in \u001b[0;36mtqdm.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1192\u001b[0m time \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_time\n\u001b[1;32m   1194\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1195\u001b[0m     \u001b[39mfor\u001b[39;00m obj \u001b[39min\u001b[39;00m iterable:\n\u001b[1;32m   1196\u001b[0m         \u001b[39myield\u001b[39;00m obj\n\u001b[1;32m   1197\u001b[0m         \u001b[39m# Update and possibly print the progressbar.\u001b[39;00m\n\u001b[1;32m   1198\u001b[0m         \u001b[39m# Note: does not call self.update(1) for speed optimisation.\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/vsl/lib/python3.8/site-packages/torch/utils/data/dataloader.py:681\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    678\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    679\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    680\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 681\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[1;32m    682\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    683\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    684\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    685\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
+      "File \u001b[0;32m~/anaconda3/envs/vsl/lib/python3.8/site-packages/torch/utils/data/dataloader.py:721\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    719\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_next_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    720\u001b[0m     index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_next_index()  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 721\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset_fetcher\u001b[39m.\u001b[39;49mfetch(index)  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    722\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[1;32m    723\u001b[0m         data \u001b[39m=\u001b[39m _utils\u001b[39m.\u001b[39mpin_memory\u001b[39m.\u001b[39mpin_memory(data, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory_device)\n",
+      "File \u001b[0;32m~/anaconda3/envs/vsl/lib/python3.8/site-packages/torch/utils/data/_utils/fetch.py:49\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch\u001b[39m(\u001b[39mself\u001b[39m, possibly_batched_index):\n\u001b[1;32m     48\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_collation:\n\u001b[0;32m---> 49\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     51\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
+      "File \u001b[0;32m~/anaconda3/envs/vsl/lib/python3.8/site-packages/torch/utils/data/_utils/fetch.py:49\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch\u001b[39m(\u001b[39mself\u001b[39m, possibly_batched_index):\n\u001b[1;32m     48\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_collation:\n\u001b[0;32m---> 49\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     51\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
+      "File \u001b[0;32m~/Project/i24_vsl/i24_vsl/data/inrix/inrix_data.py:209\u001b[0m, in \u001b[0;36mInrixDataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    207\u001b[0m idcs \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros_like(block_idcs, dtype\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mbool\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    208\u001b[0m idcs[\u001b[39m1\u001b[39m:] \u001b[39m=\u001b[39m block_idcs[\u001b[39m1\u001b[39m:] \u001b[39m!=\u001b[39m block_idcs[:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[0;32m--> 209\u001b[0m speed \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mvstack(np\u001b[39m.\u001b[39;49msplit(speed, idcs\u001b[39m.\u001b[39;49mnonzero()[\u001b[39m0\u001b[39;49m]))\n\u001b[1;32m    210\u001b[0m b_swf[\u001b[39m-\u001b[39mspeed\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]:, \u001b[39m-\u001b[39mspeed\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]:] \u001b[39m=\u001b[39m speed\n\u001b[1;32m    211\u001b[0m b_tt[\u001b[39m-\u001b[39mt_time\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]:] \u001b[39m=\u001b[39m t_time\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mvstack\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/anaconda3/envs/vsl/lib/python3.8/site-packages/numpy/core/shape_base.py:282\u001b[0m, in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    280\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(arrs, \u001b[39mlist\u001b[39m):\n\u001b[1;32m    281\u001b[0m     arrs \u001b[39m=\u001b[39m [arrs]\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m _nx\u001b[39m.\u001b[39;49mconcatenate(arrs, \u001b[39m0\u001b[39;49m)\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 5 and the array at index 2 has size 4"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = th.optim.Adam(model.parameters(), lr=0.001)\n",
+    "lr_scheduler = th.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.3)\n",
+    "\n",
+    "for epoch in tqdm(range(25),\n",
+    "                  desc=\"Main loops\",\n",
+    "                  position=0,\n",
+    "                  leave=True):\n",
+    "    # Train\n",
+    "    for i, (x, time, loc, hol, y) in enumerate(tqdm(trn_loader,\n",
+    "                                                    desc=\"Training...\",\n",
+    "                                                    total=len(trn_loader),\n",
+    "                                                    position=1,\n",
+    "                                                    leave=False)):\n",
+    "        optimizer.zero_grad()\n",
+    "        _, loss = model(\n",
+    "            {\n",
+    "                \"x\": x.float(),\n",
+    "                \"loc\": loc.long(),\n",
+    "                \"time\": th.cat([time, hol], -1).float(),\n",
+    "                \"y\": y.float()\n",
+    "            }\n",
+    "        )\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        if i % 10000 == 0:\n",
+    "            print(\n",
+    "                f\"Train [{i+1:d}/{len(trn_loader):d}] Loss: {loss.item():4f}.\"\n",
+    "            )\n",
+    "\n",
+    "    lr_scheduler.step()\n",
+    "\n",
+    "    # Eval\n",
+    "    for i, (x, time, loc, hol, y) in enumerate(tqdm(val_loader,\n",
+    "                                                    desc=\"Evaluating...\",\n",
+    "                                                    total=len(val_loader),\n",
+    "                                                    position=1,\n",
+    "                                                    leave=False)):\n",
+    "        mae: List[float] = []\n",
+    "        with th.no_grad():\n",
+    "            pred, _ = model({\n",
+    "                \"x\": x.float(),\n",
+    "                \"loc\": loc.long(),\n",
+    "                \"time\": th.cat([time, hol], -1).float(),\n",
+    "                \"y\": y.float()\n",
+    "            })\n",
+    "            step_mae = th.abs(pred.sub(y.float())).mean()\n",
+    "            mae.append(step_mae.item())\n",
+    "        \n",
+    "    print(f\"Epoch [{epoch + 1:d}/25] Eval MAE: {sum(mae) / len(mae):.4f}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb0af370",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
